# XDBotFork

./: CMakeLists.txt  about.md  changelog.md  fix_placeholder.py  foo.txt  mod.json
src/: BlurAPI.hpp  global.cpp  includes.hpp  keybinds.cpp  macro.cpp  macro.hpp  main.cpp  pathfinder.cpp  pathfinder.hpp  pathfinder_test.cpp  pathfinder_test.hpp
src/gdr/: gdr.cpp  gdr.hpp
src/hacks/: autoclicker.cpp  frame_stepper.cpp  other.cpp  show_trajectory.cpp  show_trajectory.hpp  tps_bypass.cpp
src/practice_fixes/: player.cpp
src/renderer/: renderer.cpp  renderer.hpp
src/ui/: auto_swift_click_settings_layer.hpp  autoclicker_settings_layer.hpp  autosave_settings_layer.hpp  button_edit_layer.cpp  button_edit_layer.hpp  clickbot_layer.cpp  clickbot_layer.hpp  game_ui.cpp  game_ui.hpp  load_macro_layer.cpp  load_macro_layer.hpp  macro_cell.cpp  macro_editor.cpp  macro_editor.hpp  macro_info_layer.hpp  macro_timeline_layer.cpp  macro_timeline_layer.hpp  mirror_settings_layer.hpp  noclip_settings_layer.hpp  pathfinder_settings_layer.hpp  pathfinder_test_settings_layer.hpp  record_layer.cpp  record_layer.hpp  render_presets_layer.hpp  render_settings_layer.cpp  render_settings_layer.hpp  save_macro_layer.hpp  step_shift_settings_layer.hpp  swift_click_settings_layer.hpp  trajectory_settings_layer.hpp
src/utils/: utils.cpp
